# UI-Monitor

./: Cargo.toml  README.md
sql/: get_or_insert_tag.sql  get_project_of_user.sql  get_reports_of_session.sql  get_session_ids.sql  get_tags_from_access_key.sql  get_tags_of_report.sql  get_user_by_email.sql  get_user_by_username.sql  insert_project.sql  insert_report.sql  project_id_from_access_key.sql  save_tag_to_report.sql  schema.sql
src/: dberror.rs  main.rs
src/api/: mod.rs  projects.rs  reports.rs  user_auth.rs  users.rs
src/db/: mod.rs  percentage.rs  projects.rs  reports.rs  sessions.rs  steps_analytics.rs  users.rs
static/frontend/: package-lock.json  package.json
static/frontend/src/: App.js
static/frontend/src/api/: auth.js  projects.js  queries.js  tagGroups.js
static/frontend/src/components/: Analytics.js  LoginPage.js  Project.js  Project.module.css  ProjectCard.js  ProjectOverview.js  Projects.js  Projects.module.css  QueryCreatorModal.js  TopAppBar.js
